
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the XXX IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
R1.0.0: Initial import of the LCLS II BunchLengthMonitor IOC Application
        Built against EPICS R3.15.5-1.0